force-app/main/default/objects/cgcloud__Account_Sub_Account__c/cgcloud__Account_Sub_Account__c.object-meta.xml
<CustomObject>
    <description>Defines the Account to Sub Account relationship</description>
    <label>Sub Account</label>
    <nameField>
        <displayFormat>ASA-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>