force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <description>Parent customer for this sub account relation.</description>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sub Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>