force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sub_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Sub Account lookup.</description>
    <label>Sub Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sub Accounts</relationshipLabel>
    <relationshipName>Sub_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>