force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Sub_Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sub_Account_External_Id__c</fullName>
    <description>Formula field with the Sub Account External Id, to ensure access.</description>
    <formula>cgcloud__Sub_Account__r.cgcloud__ExternalId__c</formula>
    <label>Sub Account External Id</label>
    <type>Text</type>
</CustomField>