force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Validity period start date.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>