force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE( YEAR(TODAY())+ 30,12,31 )</defaultValue>
    <description>Validity period end date.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>