force-app/main/default/objects/cgcloud__Account_Sub_Account__c/fields/cgcloud__Volume_Percent__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Volume_Percent__c</fullName>
    <description>It indicates how much percent the specific sub account contributes to the overall volume of the account.</description>
    <label>% of Volume</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>