force-app/main/default/objects/cgcloud__Account_Sub_Account__c/validationRules/cgcloud__Invalid_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Invalid_Period</fullName>
    <active>true</active>
    <description>Valid Thru must be greater than or equal to Valid From.</description>
    <errorConditionFormula>cgcloud__Valid_Thru__c &lt; cgcloud__Valid_From__c</errorConditionFormula>
    <errorMessage>Valid Thru must be greater than or equal to Valid From.</errorMessage>
</ValidationRule>