force-app/main/default/objects/cgcloud__Account_Sub_Account__c/validationRules/cgcloud__Invalid_Receiver_External_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Invalid_Receiver_External_Id</fullName>
    <active>true</active>
    <description>Sub Account external Id cannot be Empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Sub_Account_External_Id__c)</errorConditionFormula>
    <errorMessage>Sub Account external Id cannot be Empty.</errorMessage>
</ValidationRule>