force-app/main/default/objects/cgcloud__Account_Sub_Account__c/validationRules/cgcloud__Invalid_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Invalid_Sales_Org</fullName>
    <active>true</active>
    <description>Account and Sub Account Sales Orgs must be equal.</description>
    <errorConditionFormula>cgcloud__Account__r.cgcloud__Sales_Org__c &lt;&gt; cgcloud__Sub_Account__r.cgcloud__Sales_Org__c</errorConditionFormula>
    <errorMessage>Account and Sub Account Sales Orgs must be equal.</errorMessage>
</ValidationRule>